2002-12-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03595] tolower, toupper
	* Str.c (Strlower): TOLOWER
		(Strupper): TOUPPER
	* backend.c: delete ctype.h
	* etc.c (gethtmlcmd): TOLOWER
	* file.c (readHeader): TOLOWER
		(checkOverWrite): TOLOWER
		(guess_charset): TOLOWER
	* ftp.c: delete ctype.h
	* indep.c (strcasecmp): TOLOWER
		(strncasecmp): TOLOWER
		(strcasematch): TOLOWER
	* istream.c: include myctype.h
		(ssl_get_certificate): TOLOWER
	* mailcap.c (mailcapMatch): TOLOWER
	* main.c (_quitfm): TOLOWER
	* menu.c (accesskey_menu): TOLOWER
	* mimehead.c: include myctype.h
		(decodeWord): TOUPPER
	* mktable.c: delete ctype.h, include myctype.h
		(main): IS_SPACE
	* myctype.h: delete ctype.h
		(TOLOWER): added
		(TOUPPER): added
	* parsetagx.c (parse_tag): TOLOWER
	* rc.c (str_to_bool): TOLOWER
		(str_to_color): TOLOWER
	* regex.c: delete ctype.h, include myctype.h
		(TOLOWER): added
		(TOUPPER): added
		(regmatch1): TOLOWER
		(matchWhich): TOLOWER, TOUPPER

2002-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* mimehead.c (decodeWord): don't use toupper() (requires ctype.h)

2002-12-22  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03594] mime decode with encoding named 'b' & 'q'
	* mimehead.c (decodeWord): toupeer(method)

2002-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* file.c (discardline): not used

2002-12-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03593] Re: segmentation fault when <title> exist after <img>
	* file.c (cur_title): added
		(save_obuf): deleted
		(process_title): added
		(process_n_title): added
		(feed_title): added
		(HTMLtagproc1): rewrite HTML_TITLE, HTML_N_TITLE, 
				HTML_TITLE_ALT, HTML_N_HEAD, HTML_HEAD
		(HTMLlineproc0): check RB_TITLE
		(completeHTMLstream): add RB_TITLE
		(loadHTMLstream): initialize cur_title

2002-12-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03590] segmentation fault when <title> exist after <img>
	* file.c (save_line): deleted
		(save_prevchar): deleted